# walle-q

./: .gitignore  .gitmodules  404.html  CHANGELOG.MD  CNAME  Cargo.toml  Cross.toml  LICENSE  Makefile.toml  README.md  changelog.html  index.html  message.html  print.html  searchindex.js  searchindex.json  start.html  struct.html
.github/: compress.sh
.github/workflows/: deploy-doc.yaml  release.yml
action/: action.html  file.html  group.html  message.html  meta.html  private.html
css/: general.css
doc/: book.toml
doc/src/: Introduction.md  SUMMARY.md  action.md  changelog.md  event.md  message.md  start.md  struct.md  v11.md
doc/src/action/: action.md  file.md  group.md  message.md  meta.md  private.md
doc/src/event/: event.md  message.md  notice.md  request.md
doc/theme/css/: general.css
event/: event.html  message.html  notice.html  request.html
src/: command.rs  config.rs  error.rs  handler.rs  lib.rs  login.rs  main.rs  multi.rs  parse.rs  util.rs  utils.rs
src/database/: image.rs  leveldb.rs  message.rs  mod.rs  simage.rs  sled.rs  sleddb.rs  voice.rs
src/extra/: action.rs  message.rs  mod.rs  notice.rs  request.rs  segment.rs
src/handler/: file.rs  impls.rs  infos.rs  mod.rs  v11.rs
src/model/: action.rs  message.rs  mod.rs  notice.rs  request.rs  segment.rs  values.rs
src/parse/: audio.rs  err.rs  event.rs  mod.rs  msg.rs  util.rs  v11.rs  v12.rs
