[package]
name = "walle-q"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.walle-core]
# version = "0.5.4"
git = "https://github.com/abrahum/Walle-core.git"
features = ["impl", "websocket", "http"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "*"
futures-util = "*"
async-trait = "*"
async-recursion = "*"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1.0.0"
toml = "0.5"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["macros"] }

uuid = "1.0"
clap = { version = "3.0", features = ["derive"] }
cached = "0.34"
bytes = "1.1"
hex = "0.4"
base64 = "0.13"
sha2 = "0.10"
colored = "2"
rand = "0.8"
once_cell = "1"

dashmap = "5.3"

# qrcode = "0.12"
# rqrr = "0.5"
image = "0.24"
silk-rs = "0.1"

sled = "0.34"
rusty-leveldb = "0.3"

uri-reader = { git = "https://github.com/abrahum/uri-reader", features = [
  "vendored",
] }

ricq = "0.1.14"
ricq-core = "0.1.14"
prost = "0.9"

# [dev-dependencies]
md5 = "0.7"

[features]
vendored = ["uri-reader/vendored"]

[profile.release]
lto = true
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
strip = true
