[package]
name = "walle-q"
version = "0.2.5-fix2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.walle-core]
version = "0.7.4"
# git = "https://github.com/abrahum/Walle-core.git"
features = ["impl-obc", "websocket", "http", "alt"]

[dependencies]
ricq = "0.1.19"
ricq-core = "0.1.19"
prost = "0.9"

tokio = { version = "1", features = ["full"] }
tokio-util = "*"
futures-util = "*"
async-trait = "*"
async-recursion = "*"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1.0.0"
toml = "0.7"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["macros"] }
chrono = "0.4"

uuid = "1.0"
clap = { version = "4.1.*", features = ["derive"] }
cached = "0.42"
bytes = "1.1"
colored = "2"
rand = "0.8"
once_cell = "1"

dashmap = "5.3"

silk-rs = { version = "0.2", optional = true }

image = "0.24"
sled = "0.34"
rusty-leveldb = "1.0.3"

uri-reader = { git = "https://github.com/abrahum/uri-reader", features = [
  "vendored",
] }

md5 = "0.7"
hex = "0.4"
base64 = "0.21"
sha2 = "0.10"

[features]
vendored = ["uri-reader/vendored"]
silk = ["silk-rs"]
rustls = ["uri-reader/rustls"]

[[bin]]
name = "walle-q"

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
debug = false
debug-assertions = false
overflow-checks = false
strip = true
